--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -1,6 +1,10 @@
 /* public/src/css/styles.css */
 
-/* Глобальные стили (если нужно) */
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
