--- a/public/src/css/blocks/movie-card/movie-card.css
+++ b/public/src/css/blocks/movie-card/movie-card.css
@@ -2,37 +2,40 @@
 
 /* Стили для блока movie-card */
 .movie-card {
-    border: 1px solid #ddd;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    transition: box-shadow 0.15s ease-in-out;
+  border-radius: 0.1rem;
+  overflow: hidden;
+  padding: 15px 15px 26px 15px;
+  background-color: rgba(241, 235, 230, 0.95);
+  transition: box-shadow 0.15s ease-in-out;
+  gap: 15px;
 }
 
 .movie-card:hover {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 /* Стили для элемента __image блока movie-card */
 .movie-card__image {
-    width: 100%;
-    height: 200px; /* или какая-то фиксированная высота */
-    object-fit: cover;
+  width: 125px;
+  height: 175px;
+  display: block;
+  object-fit: cover;
 }
 
 /* Стили для элемента __title блока movie-card */
 .movie-card__title {
-    font-size: 1.25rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 /* Стили для элемента __text блока movie-card */
 .movie-card__text {
-    color: #6c757d;
-    font-size: 0.9rem;
+  color: #6c757d;
+  font-size: 0.9rem;
 }
 
 /* Стили для элемента __button блока movie-card */
 .movie-card__button {
-    width: 100%;
+  width: 100%;
 }
